Bug 816054 - Assert wrappers are sensible when added to compartment map r=billm